correctly cropped clock/comment icons

--- a/common/app/assets/stylesheets/module/facia/_items.scss
+++ b/common/app/assets/stylesheets/module/facia/_items.scss
@@ -148,17 +148,16 @@
     .trail__count {
         position: relative;
         float: left;
-        padding-top: 1px;
         i {
             margin: 0;
             position: absolute;
-            top: 0;
+            top: 2px;
         }
     }
     .item__timestamp {
         min-width: gs-span(1) - 16;
         padding-right: $gs-gutter/2;
-        padding-left: 16px;
+        padding-left: 13px;
         i {
             left: 0;
         }
